@@ -5,6 +5,8 @@
 * Fixed: BUILDR-68 Now accepting JAVA_HOME setting on OS X (Nathan Hamblen).
 * Fixed: JUnit now accepts java_args and passes these arguments to the JVM
 (only applicable when forking).
+* Fixed: BUILDR-70 JUnit not passing environment variables fro the
+:environment option.
 
 1.3.0 (2008-04-25)
 * Added: Testing with EasyB (Nicolas Modrzyk).
